--- a/app/views/consent_forms/_form.html.erb
+++ b/app/views/consent_forms/_form.html.erb
@@ -2,6 +2,11 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <%= f.input :name %>
+    <%= f.association :user %>
+    <%= f.input :pdf, as: :file %>
+    <%= f.association :projects %>
+    <%= f.input :form_text %>
   </div>
 
   <div class="form-actions">
