--- a/app/views/consent_forms/index.html.erb
+++ b/app/views/consent_forms/index.html.erb
@@ -5,6 +5,7 @@
 <table>
   <thead>
     <tr>
+      <th>Name</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,6 +13,7 @@
   <tbody>
     <% @consent_forms.each do |consent_form| %>
       <tr>
+        <td><%= consent_form.name %></td>
         <td><%= link_to 'Show', consent_form %></td>
         <td><%= link_to 'Edit', edit_consent_form_path(consent_form) %></td>
         <td><%= link_to 'Destroy', consent_form, method: :delete, data: { confirm: 'Are you sure?' } %></td>
