--- a/app/views/consent_forms/show.html.erb
+++ b/app/views/consent_forms/show.html.erb
@@ -1,22 +1,25 @@
 <p id="notice"><%= notice %></p>
-<h1>Name:</h1>
+<h1><%= t 'consent_forms.show.name' %>:</h1>
 <p><%= @consent_form.name %></p>
 
-<h2>Owner/Creator:</h2>
+<h2><%= t 'consent_forms.show.lead_admin' %>:</h2>
 <p><%= @consent_form.user.informal_name( false ) %></p>
 
-<h2>Applicable to:</h2>
+<h2><%= t 'consent_forms.show.applicable_lbl' %>:</h2>
 <% if @consent_form.projects.empty? %>
-<p>Applies to all users throughout the system.</p>
+<p><%= t 'consent_forms.show.applicable_txt' %></p>
 <% else %>
-<ul><% @consent_form.projects.each do |project|%>
+<ul>
+  <% @consent_form.projects.each do |project|%>
   <li><%= project.course.pretty_name( false ) %> : 
       <%= project.get_name( false ) %></li>
-<% end %>
+  <% end %>
 </ul>
+<% end %>
 
-<h2>Consent Form Text</h2>
-<p><%= @consent_form.form_text %></p>
+<h2><%= t 'consent_forms.show.form_text_lbl' %></h2>
+<p><%= t 'consent_forms.show.form_text' %></p>
+<p><%= raw @consent_form.form_text %></p>
 <br>
-<%= link_to 'Edit', edit_consent_form_path(@consent_form) %> |
-<%= link_to 'Back', consent_forms_path %>
+<%= link_to t( :edit ), edit_consent_form_path(@consent_form) %> |
+<%= link_to t( :back ), consent_forms_path %>
