--- a/app/views/consent_forms/edit.html.erb
+++ b/app/views/consent_forms/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Consent Form</h1>
+<h1><%= t '.title' %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @consent_form %> |
-<%= link_to 'Back', consent_forms_path %>
+<%= link_to t( :show ), @consent_form %> |
+<%= link_to t( :back ), consent_forms_path %>
