--- a/app/views/consent_forms/index.html.erb
+++ b/app/views/consent_forms/index.html.erb
@@ -1,11 +1,11 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Consent Forms</h1>
+<h1><%= t '.title' %></h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
+      <th><%= t :name %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,9 +14,12 @@
     <% @consent_forms.each do |consent_form| %>
       <tr>
         <td><%= consent_form.name %></td>
-        <td><%= link_to 'Show', consent_form %></td>
-        <td><%= link_to 'Edit', edit_consent_form_path(consent_form) %></td>
-        <td><%= link_to 'Destroy', consent_form, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to t( :show ), consent_form %></td>
+        <td><%= link_to t( :edit ), edit_consent_form_path(consent_form) %></td>
+        <td><%= link_to t( :destroy ),
+                      consent_form, method: :delete,
+                      data: { confirm: t( :confirmation ) } %>
+        </td>
       </tr>
     <% end %>
   </tbody>
