--- a/app/views/consent_forms/new.html.erb
+++ b/app/views/consent_forms/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Consent Form</h1>
+<h1><%= t 'consent_forms.new_title' %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', consent_forms_path %>
+<%= link_to t( :back ), consent_forms_path %>
