Beginning implementation of discussion boards

--- a/app/views/layouts/shared/_footer.html.erb
+++ b/app/views/layouts/shared/_footer.html.erb
@@ -57,6 +57,10 @@
                       <%= link_to t(:administration), admin_path,
                         :data => { :icon => "gear" } %>
                     </li>
+                    <li>
+                      <%= link_to t(:forums), thredded_path,
+                        :data => { :icon => "comment" } %>
+                    </li>
                     </ul>
                   </div>
               <% end %>
