--- a/app/views/layouts/graphing.html.erb
+++ b/app/views/layouts/graphing.html.erb
@@ -25,7 +25,7 @@
         <% end -%>
         <%= yield %>
       </div>
-    <%= render 'layouts/shared/footer', working: false %>
+    <%= render 'layouts/shared/footer', working: true %>
     </div>
   </body>
 </html>
