--- a/app/views/consent_forms/_form.html.erb
+++ b/app/views/consent_forms/_form.html.erb
@@ -3,10 +3,44 @@
 
   <div class="form-inputs">
     <%= f.input :name %>
+    <%= f.input :active %>
+    <%= f.input :start_date, as: :date_time_local %>
+    <%= f.input :end_date, as: :date_time_local %>
     <%= f.association :user, label_method: :email, selected: @current_user.id %>
     <%= f.input :pdf, as: :file %>
     <%= f.association :projects, as: :check_boxes %>
-    <%= f.input :form_text %>
+
+    <div data-role="tabs" id="text-tab">
+      <div data-role="navbar">
+        <ul>
+          <li>
+            <a href="#english" data-ajax="false">
+              <%= Language.where( code: 'en' ).name %>
+            </a>
+          </li>
+          <li>
+            <a href="#korean" data-ajax="false">
+              <%= Language.where( code: 'ko' ).name %>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div id="english" class="ui-body-<%= theme_code %> ui-content">
+        <h1>
+          <%= t 'consent_forms.show.form_text_lbl' %>
+            (<%= Language.where( code: 'en' ).name %>)
+        </h1>
+        <%= f.input :form_text_ko %>
+      </div>
+      <div id="korean" class="ui-body-<%= theme_code %> ui-content">
+        <h1>
+          <%= t 'consent_forms.show.form_text_lbl' %>
+            (<%= Language.where( code: 'ko' ).name %>)
+        </h1>
+        <%= f.input :form_text_ko %>
+      </div>
+    </div>
+
   </div>
 
   <div class="form-actions">
