--- a/app/views/consent_forms/show.html.erb
+++ b/app/views/consent_forms/show.html.erb
@@ -5,6 +5,16 @@
 <h2><%= t 'consent_forms.show.lead_admin' %>:</h2>
 <p><%= @consent_form.user.informal_name( false ) %></p>
 
+<h2><%= t :active %>:</h2>
+<p><%= @consent_form.active %></p>
+
+<h2><%= t :dates %>:</h2>
+<p>
+  <%= t( '.date_summ',
+            start_date: @project.start_date,
+            end_date: @project.end_date ) %>
+</p>
+
 <h2><%= t 'consent_forms.show.applicable_lbl' %>:</h2>
 <% if @consent_form.projects.empty? %>
 <p><%= t 'consent_forms.show.applicable_txt' %></p>
@@ -17,9 +27,38 @@
 </ul>
 <% end %>
 
-<h2><%= t 'consent_forms.show.form_text_lbl' %></h2>
-<p><%= t 'consent_forms.show.form_text' %></p>
-<p><%= raw @consent_form.form_text %></p>
+<div data-role="tabs" id="text-tab">
+  <div data-role="navbar">
+    <ul>
+      <li>
+        <a href="#english" data-ajax="false">
+          <%= Language.where( code: 'en' ).name %>
+        </a>
+      </li>
+      <li>
+        <a href="#korean" data-ajax="false">
+          <%= Language.where( code: 'ko' ).name %>
+        </a>
+      </li>
+    </ul>
+  </div>
+  <div id="english" class="ui-body-<%= theme_code %> ui-content">
+    <h1>
+      <%= t 'consent_forms.show.form_text_lbl' %>
+        (<%= Language.where( code: 'en' ).name %>)
+    </h1>
+    <p><%= t 'consent_forms.show.form_text_en' %></p>
+    <p><%= raw @consent_form.form_text %></p>
+  </div>
+  <div id="korean" class="ui-body-<%= theme_code %> ui-content">
+    <h1>
+      <%= t 'consent_forms.show.form_text_lbl' %>
+        (<%= Language.where( code: 'ko' ).name %>)
+    </h1>
+    <p><%= t 'consent_forms.show.form_text_ko' %></p>
+    <p><%= raw @consent_form.form_text %></p>
+  </div>
+</div>
 <br>
 <%= link_to t( :edit ), edit_consent_form_path(@consent_form) %> |
 <%= link_to t( :back ), consent_forms_path %>
