fixing some issues with consent form activation

--- a/app/views/shared/_consent.erb
+++ b/app/views/shared/_consent.erb
@@ -3,6 +3,6 @@
     :controller => "consent_logs", :action => "edit",
     :consent_form_id => project.consent_form.id %>
 <% else %>
-  Not for Research
+  <%= t 'consent_forms.not_for_research' %>
 <% end %>
 
