urgent fix for a prod error

--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -6,8 +6,8 @@
     <div data-role="navbar">
       <ul>
         <li><a href="#details" data-ajax="false"><%= t :details %></a></li>
-        <li><a href="#participants" data-ajax="false"><%= t 'courses.participants %></a></li>
-        <li><a href="#activities" data-ajax="false"><%= t 'courses.activities %></a></li>
+        <li><a href="#participants" data-ajax="false"><%= t 'courses.participants' %></a></li>
+        <li><a href="#activities" data-ajax="false"><%= t 'courses.activities' %></a></li>
       </ul>
     </div>
     <div id="details" class="ui-body-<%= theme_code %> ui-content">
