--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -1,4 +1,4 @@
 <h1><%= t 'courses.editing' %></h1>
 <%= render 'form' %>
-<%= link_to t :show, courses_url( @course ) %> |
-<%= link_to t :back, courses_path %>
+<%= link_to t( :show ), courses_url( @course ) %> |
+<%= link_to t( :back ), courses_path %>
