--- a/app/views/installments/new.html.erb
+++ b/app/views/installments/new.html.erb
@@ -63,5 +63,5 @@
     </tr>
   </table>
   <%= render :partial => "installments/shared/comments", :object => f %>
-  <%= f.submit t 'installments.submit' %>
+  <%= f.submit t( 'installments.submit' ) %>
 <% end %>
