--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,3 +1,3 @@
 <h1><%= t 'courses.new.title' %></h1>
 <%= render 'form' %>
-<%= link_to t :back, courses_path %>
+<%= link_to t( :back ), courses_path %>
