--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -241,7 +241,8 @@
                 </td>
                 <td><%= link_to t( :show), experience %>&nbsp;|&nbsp;
                   <%= link_to( t (:activate ),
-                    activate_experience_path( experience_id: experience.id ) ) + raw("&nbsp;|&nbsp;" ) unless experience.active %>
+                    activate_experience_path( experience_id: experience.id ) ) %>
+                    <%= raw("&nbsp;|&nbsp;" ) unless experience.active %>
                   <%= link_to t( :edit), edit_experience_path(experience) %>&nbsp;|&nbsp;
                   <%= link_to t( :destroy), experience,
                               method: :delete,
