Some small fixes related to consent and other stuff

--- a/app/views/candidate_lists/edit.html.erb
+++ b/app/views/candidate_lists/edit.html.erb
@@ -9,7 +9,7 @@
     </tr>
     <tr>
       <th align="right">Description:</th>
-      <td><%= @candidate_list.bingo_game.description %></td>
+      <td><%= raw( @candidate_list.bingo_game.description ) %></td>
     </tr>
     <tr>
       <th align="right">For:</th>
