--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -211,7 +211,7 @@
         <td>
           <center>
             <%= link_to t( 'devise.registrations.update_status' ), 
-                edit_consent_log_path( consent_log ) %>
+                edit_consent_log_path( consent_log.consent_form_id ) %>
           </center>
         </td>
       </tr>
