--- a/app/views/bingo_games/show.html.erb
+++ b/app/views/bingo_games/show.html.erb
@@ -23,7 +23,7 @@
     </p>
     <p>
       <h3><%= t :description %>:</h3>
-      <%= @bingo_game.description %></br>
+      <%= raw( @bingo_game.description ) %></br>
       <%= t( 'bingo_games.attached_to', course_name: @bingo_game.course.get_name( anonymize ) ) %>
       <h4><%= t 'bingo_games.days_for_prep' %>:</h4><%= @bingo_game.lead_time %>
       <h4><%= t 'bingo_games.ind_term_count' %>:</h4><%= @bingo_game.individual_count %>
