some query optimizations

--- a/app/views/candidate_lists/edit.html.erb
+++ b/app/views/candidate_lists/edit.html.erb
@@ -12,7 +12,7 @@
       <td><%= raw( @candidate_list.bingo_game.description ) %></td>
     </tr>
     <tr>
-      <th align="right"><%= :for %>:</th>
+      <th align="right"><%= t :for %>:</th>
       <td>
         <%= @current_user.name( anonymize ) %>
 
