--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -165,7 +165,9 @@
       <% activities.each do |activity| %>
       <tr>
         <% if activity.class.name == "BingoGame" && activity.reviewed %>
-          <td><%= link_to activity.get_name( false ), bingo_list_stats_path( activity.candidate_list_for_user( @current_user ) ) %></td>
+          <td><%= link_to activity.get_name( false ),
+                  bingo_list_stats_path( activity.candidate_list_for_user( @current_user ) ) %>
+          </td>
         <% else %>
           <td><%= activity.get_name false %></td>
         <% end %>
