--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -94,7 +94,12 @@
             <td> <%= group.get_name( anonymize ) %></td>
             <td> <%= task.project.course.get_name( anonymize ) %></td>
             <td> <%= l task.start_date.in_time_zone( @current_user.timezone ), format: :tz_clarity %> </td>
-            <td> <%= l task.end_date.in_time_zone( @current_user.timezone ), format: :tz_clarity %> </td>
+            <td>
+              <div hidden>
+                <%= l task.end_date.in_time_zone( @current_user.timezone ), format: :datestamp %>
+              </div>
+              <%= l task.end_date.in_time_zone( @current_user.timezone ), format: :tz_clarity %>
+            </td>
             <td>
               <%= render :partial => "shared/consent", :locals => { :project => task.project } %>
             </td>
