--- a/app/views/bingo_games/show.html.erb
+++ b/app/views/bingo_games/show.html.erb
@@ -114,7 +114,7 @@
           <p>
             <%= t '.identified_concepts', count: @bingo_game.get_concepts.count %>
             <table data-role="table"
-              id="basicTable"
+              id="concepts_table"
               data-mode="columntoggle"
               data-column-btn-theme="<%= theme_code %>"
               data-column-btn-text="Show/hide columns&hellip;"
