removing an extraneous character

--- a/app/views/bingo_games/review_candidates.html.erb
+++ b/app/views/bingo_games/review_candidates.html.erb
@@ -31,7 +31,7 @@
     <thead>
       <tr>
         <th>#</th>
- '       <th data-priority="0"><%= t 'bingo_games.term' %></th>
+        <th data-priority="0"><%= t 'bingo_games.term' %></th>
         <th data-priority="1"><%= t :submitted_by %></th>
         <th data-priority="0"><%= t 'bingo_games.definition' %></th>
         <th data-priority="0"><%= t 'bingo_games.feedback' %></th>
