small optimizations and corrections

--- a/app/views/candidate_lists/list_stats.html.erb
+++ b/app/views/candidate_lists/list_stats.html.erb
@@ -36,8 +36,9 @@
     </thead>
     <tbody>
       <% candidate_feedbacks.each do |cf| %>
-        <% if @candidate_list.candidates.completed.count > 0 %>
-        <td><%= @candidate_list.get_by_feedback( cf ).count * 100 / @candidate_list.candidates.completed.count %></td>
+        <% if @candidate_list.candidates.completed.count > 0
+           completed_count = @candidate_list.candidates.completed.count %>
+        <td><%= @candidate_list.get_by_feedback( cf ).count * 100 / completed_count %></td>
         <% else %>
         <td>N/A</td>
         <% end %>
