working on some UI fixes

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -117,7 +117,7 @@
   <div id="activities" class="ui-body-<%= theme_code %> ui-content">
 
 <p>
-  <h3><%= t 'bingo_games.bingo_games' %></h3>
+  <h3><%= t 'courses.activities' %></h3>
     <table data-role="table"
           id="bingo_table"
           data-mode="columntoggle"
