--- a/app/views/candidate_lists/edit.html.erb
+++ b/app/views/candidate_lists/edit.html.erb
@@ -24,8 +24,10 @@
           <% else %>
             <% if @candidate_list.group_requested # Have you already requested collaboration? %>
               [<%= t '.waiting' %>]
-            <% elsif @candidate_list.others_requested_help > 0 # Is your team waiting to hear from you? %>
-              <%= t '.req_rec', grp_name: @candidate_list.group.get_name( anonymize ) %>: 
+            <% elsif @candidate_list.others_requested_help > 0 # Is your team waiting to hear from you?
+              group = @candidate_list.bingo_game.project.group_for_user( @current_user )
+            %>
+              <%= t '.req_rec', grp_name: group.get_name( anonymize ) %>: 
               <%= link_to (t :accept ), request_bingo_collaboration_path( 
                         id: @candidate_list.id, desired: "yes" ),
                         data: { confirm: (t '.confirm_accept' ) } %> or
@@ -33,7 +35,9 @@
                         id: @candidate_list.id, desired: "no" ), 
                         data: { confirm: (t '.confirm_decline' ) } %> 
             <% else 
-                query = t '.req_help', grp_name: @candidate_list.group.get_name( anonymize ) %>
+                query = t '.req_help', grp_name:
+                @candidate_list.bingo_game.project.group_for_user( @current_user ).
+                  get_name( anonymize ) %>
               <%= link_to( query, request_bingo_collaboration_path( 
                         id: @candidate_list.id, desired: "yes" ), 
                         data: { confirm: (t '.confirm_accept' ) } ) %> 
