more realistic terms in bingo! demo

--- a/app/views/candidate_lists/edit.html.erb
+++ b/app/views/candidate_lists/edit.html.erb
@@ -4,7 +4,7 @@
      anonymize = false %>
   <table>
     <tr>
-      <th align="right"><%= t 'bingo_games.topic' %>Topic:</th>
+      <th align="right"><%= t 'bingo_games.topic' %></th>
       <td><%= @candidate_list.bingo_game.topic %></td>
     </tr>
     <tr>
