--- a/app/views/layouts/shared/_footer.html.erb
+++ b/app/views/layouts/shared/_footer.html.erb
@@ -77,7 +77,7 @@
             <%= mail_to "support@CoLab.onlin", t(:support),
                   :subject => "SAPA Support Request",
                   :data => { :icon => "mail", :role => "button" } %>
-            <%= link_to t(:about), "https://www.PeerAssess.info",
+            <%= link_to t(:about), "http://www.PeerAssess.info",
                   :data => { :icon => "info", :role => "button" } %>
           </div>
         </div>
